index ready no adaption

--- a/index/index.html
+++ b/index/index.html
@@ -13,61 +13,77 @@
 
 <body>
     <header class="header">
-        <div class="menu">
-            <div class="img">
-                <a href="index.html" id="logo-link"><img src="index_img/logo.jpg" alt="logo"></a>
-            </div>
-            <nav class="navbar">
-                <span></span>
-                <a href="index.html">Home</a>
-                <a href="../About/about.html">About</a>
-                <a href="../Portfolio/portfolio.html">Portfolio</a>
-                <a href="../Blog/blog.html">Blog</a>
-                <a href="../Contact/contact.html">Contact</a>
-            </nav>
-        </div>
-        <div class="hero-header">
-            <button class="button-arrow-left"><i class="fas fa-chevron-left"></i></button>
-            <div class="title">
-                <h1>Lian Creative Agency</h1>
-                <h3>Minimal Freelance Portfolio</h3>
-            </div>
-            <button class="button-arrow-right button-arrow-primary"><i class="fas fa-chevron-right"></i></button>
-        </div>
-    </header>
-    <div class="section">
-        <div class="hero">
-            <div class="section-menu">
-                <nav class="small-navbar">
-                    <a href="#" class="link">All</a>
-                    <img src="index_img/line.jpg" alt="line">
-                    <a href="#" class="link">Logo</a>
-                    <img src="index_img/line.jpg" alt="line">
-                    <a href="#" class="link">Mobile App</a>
-                    <img src="index_img/line.jpg" alt="line">
-                    <a href="#" class="link">wordpress</a>
-                    <img src="index_img/line.jpg" alt="line">
-                    <a href="#" class="link">Web Design</a>
-                    <img src="index_img/line.jpg" alt="line">
-                    <a href="#" class="link">UI/IX</a>
-                    <img src="index_img/line.jpg" alt="line">
-                    <a href="#" class="link">Branding</a>
+            <div class="menu">
+                <div class="img">
+                    <a href="index.html" id="logo-link"><img src="index_img/logo.jpg" alt="logo"></a>
+                </div>
+                <nav class="navbar">
+                    <span></span>
+                    <a href="index.html">Home</a>
+                    <a href="../About/about.html">About</a>
+                    <a href="../Portfolio/portfolio.html">Portfolio</a>
+                    <a href="../Blog/blog.html">Blog</a>
+                    <a href="../Contact/contact.html">Contact</a>
                 </nav>
             </div>
-            <div class="cards">
-                <img src="index_img/1.jpg" class="card card1" alt="product">
-                <img src="index_img/2.jpg" class="card card2" alt="product">
-                <img src="index_img/3.jpg" class="card card3" alt="product">
-                <img src="index_img/4.jpg" class="card card4" alt="product">
-                <img src="index_img/5.jpg" class="card card5" alt="product">
-                <img src="index_img/6.jpg" class="card card6" alt="product">
-                <img src="index_img/7.jpg" class="card card7" alt="product">
-                <img src="index_img/8.jpg" class="card card8" alt="product">
-                <img src="index_img/9.jpg" class="card card9" alt="product">
-                <img src="index_img/10.jpg" class="card card10" alt="product">
+            <div class="hero-header">
+                <button class="button-arrow-left"><i class="fas fa-chevron-left"></i></button>
+                <div class="title">
+                    <h1>Lian Creative Agency</h1>
+                    <h3>Minimal Freelance Portfolio</h3>
+                </div>
+                <button class="button-arrow-right button-arrow-primary"><i class="fas fa-chevron-right"></i></button>
             </div>
-        </div>
+    </header>
+    <div class="section">
+            <div class="hero">
+                <div class="section-menu">
+                    <nav class="small-navbar">
+                        <a href="#" class="link">All</a>
+                        <img src="index_img/line.jpg" alt="line">
+                        <a href="#" class="link">Logo</a>
+                        <img src="index_img/line.jpg" alt="line">
+                        <a href="#" class="link">Mobile App</a>
+                        <img src="index_img/line.jpg" alt="line">
+                        <a href="#" class="link">wordpress</a>
+                        <img src="index_img/line.jpg" alt="line">
+                        <a href="#" class="link">Web Design</a>
+                        <img src="index_img/line.jpg" alt="line">
+                        <a href="#" class="link">UI/IX</a>
+                        <img src="index_img/line.jpg" alt="line">
+                        <a href="#" class="link">Branding</a>
+                    </nav>
+                </div>
+                <div class="cards">
+                    <div class="card1"><img src="index_img/1.jpg" class="card" alt="product"></div>
+                    <div class="card2"><img src="index_img/2.jpg" class="card" alt="product"></div>
+                    <div class="card3"><img src="index_img/3.jpg" class="card" alt="product"></div>
+                    <div class="card4"><img src="index_img/4.jpg" class="card" alt="product"></div>
+                    <div class="card5"><img src="index_img/5.jpg" class="card" alt="product"></div>
+                    <div class="card6"><img src="index_img/6.jpg" class="card" alt="product"></div>
+                    <div class="card7"><img src="index_img/7.jpg" class="card" alt="product"></div>
+                    <div class="card8"><img src="index_img/8.jpg" class="card" alt="product"></div>
+                    <div class="card9"><img src="index_img/9.jpg" class="card" alt="product"></div>
+                    <div class="card10"><img src="index_img/10.jpg" class="card" alt="product"></div>
+                </div>
+                <button class="hero-button">Load more</button>
+            </div>
     </div>
+    <footer class="footer">
+            <div class="footer-logo footer-center">
+                <img src="index_img/logo.jpg" alt="logo">
+            </div>
+            <div class="social-links footer-center">
+                <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
+                <a href="#" class="social"><i class="fab fa-twitter"></i></a>
+                <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#" class="social"><i class="fab fa-dribbble"></i></a>
+                <a href="#" class="social"><i class="fab fa-pinterest-p"></i></a>
+                <a href="#" class="social"><i class="fab fa-instagram"></i></a>
+            </div>
+            <div class="copyright footer-center">© 2016<span>Mulitix Theme</span>by ThemeForces. All Rights Reserved.</div>
+    </footer>
 </body>
 
 </html>
