try to adaption

--- a/index/index.html
+++ b/index/index.html
@@ -18,12 +18,15 @@
                     <a href="index.html" id="logo-link"><img src="index_img/logo.jpg" alt="logo"></a>
                 </div>
                 <nav class="navbar">
-                    <span></span>
+                    
                     <a href="index.html">Home</a>
                     <a href="../About/about.html">About</a>
                     <a href="../Portfolio/portfolio.html">Portfolio</a>
                     <a href="../Blog/blog.html">Blog</a>
                     <a href="../Contact/contact.html">Contact</a>
+                    <button class="menu-button">
+                        <span></span>
+                    </button>
                 </nav>
             </div>
             <div class="hero-header">
