--- a/index/index.html
+++ b/index/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Lian</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="button/js/menu-button.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
@@ -18,16 +19,15 @@
                     <a href="index.html" id="logo-link"><img src="index_img/logo.jpg" alt="logo"></a>
                 </div>
                 <nav class="navbar">
-                    
                     <a href="index.html">Home</a>
                     <a href="../About/about.html">About</a>
                     <a href="../Portfolio/portfolio.html">Portfolio</a>
                     <a href="../Blog/blog.html">Blog</a>
                     <a href="../Contact/contact.html">Contact</a>
-                    <button class="menu-button">
-                        <span></span>
-                    </button>
                 </nav>
+                <a href="#" id="menu-button">
+                    <span id="nav-span"></span>
+                </a>
             </div>
             <div class="hero-header">
                 <button class="button-arrow-left"><i class="fas fa-chevron-left"></i></button>
@@ -64,10 +64,6 @@
                     <div class="card4"><img src="index_img/4.jpg" class="card" alt="product"></div>
                     <div class="card5"><img src="index_img/5.jpg" class="card" alt="product"></div>
                     <div class="card6"><img src="index_img/6.jpg" class="card" alt="product"></div>
-                    <div class="card7"><img src="index_img/7.jpg" class="card" alt="product"></div>
-                    <div class="card8"><img src="index_img/8.jpg" class="card" alt="product"></div>
-                    <div class="card9"><img src="index_img/9.jpg" class="card" alt="product"></div>
-                    <div class="card10"><img src="index_img/10.jpg" class="card" alt="product"></div>
                 </div>
                 <button class="hero-button">Load more</button>
             </div>
