--- a/index/index.html
+++ b/index/index.html
@@ -56,16 +56,21 @@
                         <img src="index_img/line.jpg" alt="line">
                         <a href="#" class="link">Branding</a>
                     </nav>
+                    <h3>Jobs</h3>
                 </div>
                 <div class="cards">
-                    <div class="card1"><img src="index_img/1.jpg" class="card" alt="product"></div>
-                    <div class="card2"><img src="index_img/2.jpg" class="card" alt="product"></div>
-                    <div class="card3"><img src="index_img/3.jpg" class="card" alt="product"></div>
-                    <div class="card4"><img src="index_img/4.jpg" class="card" alt="product"></div>
-                    <div class="card5"><img src="index_img/5.jpg" class="card" alt="product"></div>
-                    <div class="card6"><img src="index_img/6.jpg" class="card" alt="product"></div>
+                    <div class="card1 product"><img src="index_img/1.jpg" class="card" alt="product"></div>
+                    <div class="card2 product"><img src="index_img/2.jpg" class="card" alt="product"></div>
+                    <div class="card3 product"><img src="index_img/3.jpg" class="card" alt="product"></div>
+                    <div class="card4 product"><img src="index_img/4.jpg" class="card" alt="product"></div>
+                    <div class="card5 product"><img src="index_img/5.jpg" class="card" alt="product"></div>
+                    <div class="card6 product"><img src="index_img/6.jpg" class="card" alt="product"></div>
+                    <div class="card7 product"><img src="index_img/7.jpg" class="card" alt="product"></div>
+                    <div class="card8 product"><img src="index_img/8.jpg" class="card" alt="product"></div>
+                    <div class="card9 product"><img src="index_img/9.jpg" class="card" alt="product"></div>
+                    <div class="card10 product"><img src="index_img/10.jpg" class="card" alt="product"></div>
                 </div>
-                <button class="hero-button">Load more</button>
+                <div class="button_div"><button class="hero-button">Load more</button></div>
             </div>
     </div>
     <footer class="footer">
