--- a/index/index.html
+++ b/index/index.html
@@ -1,93 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Lian</title>
+    <link rel="stylesheet" href="css/bootstrap.css"> 
     <link rel="stylesheet" href="css/style.css">
-    <script src="button/js/menu-button.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
+    <title>Lian</title>
 </head>
-
 <body>
     <header class="header">
-            <div class="menu">
-                <div class="img">
-                    <a href="index.html" id="logo-link"><img src="index_img/logo.jpg" alt="logo"></a>
+        <div class="section">
+            <div class="container header_bg">
+                <div class="row header-flex center-block">
+                    <div class="logo col-lg-5 ">
+                        <a href="index.html"> <img class="logo-hide img-responsive" src="index_img/logo.jpg" alt="logo"></a>
+                    </div>
+                    <div class="menu col-lg-7 col-md-12 col-sm-12 col-xs-12 text-uppercase ">
+                    <nav class="navbar">
+                        <a href="index.html">Home</a>
+                        <a href="../about/about.html">About</a>
+                        <a href="#">Portfolio</a>
+                        <a href="#">Blog</a>
+                        <a href="#">Contact</a>
+                    </nav>
+                    </div>
                 </div>
-                <nav class="navbar">
-                    <a href="index.html">Home</a>
-                    <a href="../About/about.html">About</a>
-                    <a href="../Portfolio/portfolio.html">Portfolio</a>
-                    <a href="../Blog/blog.html">Blog</a>
-                    <a href="../Contact/contact.html">Contact</a>
-                </nav>
-                <a href="#" id="menu-button">
-                    <span id="nav-span"></span>
-                </a>
             </div>
-            <div class="hero-header">
-                <button class="button-arrow-left"><i class="fas fa-chevron-left"></i></button>
-                <div class="title">
+        </div>
+    </header>
+    <div class="section hero-bg">
+        <div class="container ">
+            <div class="row hero">
+                <div class="col-lg-12  col-md-12 col-sm-12 col-xs-12 text-center text-uppercase">
                     <h1>Lian Creative Agency</h1>
                     <h3>Minimal Freelance Portfolio</h3>
                 </div>
-                <button class="button-arrow-right button-arrow-primary"><i class="fas fa-chevron-right"></i></button>
             </div>
-    </header>
+        </div>
+    </div>
     <div class="section">
-            <div class="hero">
-                <div class="section-menu">
+        <div class="container main">
+            <div class="row">
+                <div class="col-lg-12 col-xs-12 text-center text-uppercase">
                     <nav class="small-navbar">
-                        <a href="#" class="link">All</a>
-                        <img src="index_img/line.jpg" alt="line">
-                        <a href="#" class="link">Logo</a>
-                        <img src="index_img/line.jpg" alt="line">
-                        <a href="#" class="link">Mobile App</a>
-                        <img src="index_img/line.jpg" alt="line">
-                        <a href="#" class="link">wordpress</a>
-                        <img src="index_img/line.jpg" alt="line">
-                        <a href="#" class="link">Web Design</a>
-                        <img src="index_img/line.jpg" alt="line">
-                        <a href="#" class="link">UI/IX</a>
-                        <img src="index_img/line.jpg" alt="line">
-                        <a href="#" class="link">Branding</a>
+                        <a href="#">All</a>
+                        <img src="index_img/line.jpg" alt="">
+                        <a href="#">Logo</a>
+                        <img src="index_img/line.jpg" alt="">
+                        <a href="#">Mobile app</a>
+                        <img src="index_img/line.jpg" alt="">
+                        <a href="#">Wordpress</a>
+                        <img src="index_img/line.jpg" alt="">
+                        <a href="#">Web design</a>
+                        <img src="index_img/line.jpg" alt="">
+                        <a href="#">UI/IX</a>
+                        <img src="index_img/line.jpg" alt="">
+                        <a href="#">Branding</a>
                     </nav>
-                    <h3>Jobs</h3>
                 </div>
-                <div class="cards">
-                    <div class="card1 product"><img src="index_img/1.jpg" class="card" alt="product"></div>
-                    <div class="card2 product"><img src="index_img/2.jpg" class="card" alt="product"></div>
-                    <div class="card3 product"><img src="index_img/3.jpg" class="card" alt="product"></div>
-                    <div class="card4 product"><img src="index_img/4.jpg" class="card" alt="product"></div>
-                    <div class="card5 product"><img src="index_img/5.jpg" class="card" alt="product"></div>
-                    <div class="card6 product"><img src="index_img/6.jpg" class="card" alt="product"></div>
-                    <div class="card7 product"><img src="index_img/7.jpg" class="card" alt="product"></div>
-                    <div class="card8 product"><img src="index_img/8.jpg" class="card" alt="product"></div>
-                    <div class="card9 product"><img src="index_img/9.jpg" class="card" alt="product"></div>
-                    <div class="card10 product"><img src="index_img/10.jpg" class="card" alt="product"></div>
-                </div>
-                <div class="button_div"><button class="hero-button">Load more</button></div>
             </div>
+            <div class="row products">
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 product-box product-1">
+                    <img src="index_img/1.jpg" alt="product">
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 product-box product-2">
+                    <img src="index_img/2.jpg" alt="product">
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 product-box product-3">
+                    <img src="index_img/3.jpg" alt="product">
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 product-box product-4">
+                    <img src="index_img/4.jpg" alt="product">
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 product-box product-5">
+                    <img src="index_img/5.jpg" alt="product">
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 product-box product-6">
+                    <img src="index_img/6.jpg" alt="product">
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 product-box product-7">
+                    <img src="index_img/7.jpg" alt="product">
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 product-box product-8">
+                    <img src="index_img/8.jpg" alt="product">
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 product-box product-9">    
+                    <img src="index_img/9.jpg" alt="product">
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 text-center product-box product-10">
+                    <img src="index_img/10.jpg" alt="product">
+                </div>
+            </div>
+        </div>
     </div>
     <footer class="footer">
-            <div class="footer-logo footer-center">
-                <img src="index_img/logo.jpg" alt="logo">
+        <div class="section">
+            <div class="container">
+                <div class="row">
+                    <div class="footer-logo col-lg-12 text-center">
+                            <a href="index.html"> <img class="img-responsive" src="index_img/logo.jpg" alt="logo"></a></div>
+                    </div>
+                <div class="row">
+                    <div class="social col-lg-12 text-center">
+                        <div class="social-links">
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-google-plus-g"></i></a>
+                            <a href="#"><i class="fab fa-twitter"></i></a>
+                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="#"><i class="fab fa-dribbble"></i></a>
+                            <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                            <a href="#"><i class="fab fa-instagram"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="copyright text-center text-uppercase col-lg-12">
+                        <span class="copyright-text">
+                            © 2016 <span class="small_copyright-text">Mulitix Theme</span> by ThemeForces. All Rights Reserved.
+                        </span>
+                    </div>
+                </div>
             </div>
-            <div class="social-links footer-center">
-                <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
-                <a href="#" class="social"><i class="fab fa-twitter"></i></a>
-                <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
-                <a href="#" class="social"><i class="fab fa-dribbble"></i></a>
-                <a href="#" class="social"><i class="fab fa-pinterest-p"></i></a>
-                <a href="#" class="social"><i class="fab fa-instagram"></i></a>
-            </div>
-            <div class="copyright footer-center">© 2016<span>Mulitix Theme</span>by ThemeForces. All Rights Reserved.</div>
+        </div>
     </footer>
 </body>
-
 </html>
