--- a/index/index.html
+++ b/index/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/bootstrap.css"> 
     <link rel="stylesheet" href="css/style.css">
+    <script src="../js/button.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
     <title>Lian</title>
@@ -26,6 +27,18 @@
                         <a href="#">Blog</a>
                         <a href="#">Contact</a>
                     </nav>
+                    <div class="menu-btn-navbar">
+                        <a href="#" id="menu-btn">
+                            <span id="line"></span>
+                        </a>
+                        <ul class="menu-down">
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="../about/about.html">About</a></li>
+                            <li><a href="#">Portfolio</a></li>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                    </div>
                     </div>
                 </div>
             </div>
