--- a/about/about.html
+++ b/about/about.html
@@ -31,8 +31,19 @@
                 </div>
             </div>
         </header>
-
-
+        <div class="section">
+            <div class="container">
+                <div class="row">
+                    <div class="title col-lg-5 col-lg-offset-2">
+                        <h1></h1>
+                        <h3></h3>
+                    </div>
+                    <div class="col-lg-5 about_bg">
+                        <img src="" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
         <footer class="footer">
             <div class="section">
                 <div class="container">
