--- a/index/index.html
+++ b/index/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/bootstrap.css"> 
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="../js/button.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
     <title>Lian</title>
 </head>
+
 <body>
     <header class="header">
         <div class="section">
@@ -20,25 +22,13 @@
                         <a href="index.html"> <img class="logo-hide img-responsive" src="index_img/logo.jpg" alt="logo"></a>
                     </div>
                     <div class="menu col-lg-7 col-md-12 col-sm-12 col-xs-12 text-uppercase ">
-                    <nav class="navbar">
-                        <a href="index.html">Home</a>
-                        <a href="../about/about.html">About</a>
-                        <a href="#">Portfolio</a>
-                        <a href="#">Blog</a>
-                        <a href="#">Contact</a>
-                    </nav>
-                    <div class="menu-btn-navbar">
-                        <a href="#" id="menu-btn">
-                            <span id="line"></span>
-                        </a>
-                        <ul class="menu-down">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="../about/about.html">About</a></li>
-                            <li><a href="#">Portfolio</a></li>
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Contact</a></li>
-                        </ul>
-                    </div>
+                        <nav class="navbar">
+                            <a href="index.html">Home</a>
+                            <a href="../about/about.html">About</a>
+                            <a href="#">Portfolio</a>
+                            <a href="#">Blog</a>
+                            <a href="#">Contact</a>
+                        </nav>
                     </div>
                 </div>
             </div>
@@ -100,7 +90,7 @@
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 product-box product-8">
                     <img src="index_img/8.jpg" alt="product">
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 product-box product-9">    
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 product-box product-9">
                     <img src="index_img/9.jpg" alt="product">
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 text-center product-box product-10">
@@ -114,8 +104,9 @@
             <div class="container">
                 <div class="row">
                     <div class="footer-logo col-lg-12 text-center">
-                            <a href="index.html"> <img class="img-responsive" src="index_img/logo.jpg" alt="logo"></a></div>
+                        <a href="index.html"> <img class="img-responsive" src="index_img/logo.jpg" alt="logo"></a>
                     </div>
+                </div>
                 <div class="row">
                     <div class="social col-lg-12 text-center">
                         <div class="social-links">
@@ -140,4 +131,5 @@
         </div>
     </footer>
 </body>
+
 </html>
